# Demo

./: .gitignore  README.md  pyproject.toml
api/: db.py  fast_api.py  interface.py
data/: invalid.xml  passenger.xsd  small.csv  small.xml  train.csv  valid.xml
demo/: __main__.py  api.py  data.py  demo.py  schema.py
