[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["River"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
lxml = "^4.9.2"
pydantic = "^1.10.4"
fire = "^0.5.0"
xmlschema = "^2.1.1"
fastapi = "^0.89.1"
boto3 = "^1.26.50"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo = "demo.demo:cli"